manifest/spring/spring-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring
  template:
    metadata:
      labels:
        app: spring
    spec:
      containers:
        - name: spring-container
          image: taikhoan916/assignment:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
