manifest/spring/spring-nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-nodeport-service
spec:
  type: NodePort
  selector:
    app: spring
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30001
